# Mymodels

./: LICENSE  README.md  build.gradle  gradlew  index.html  settings.gradle
.github/workflows/: Mymodels.yml
app/: build.gradle  google-services.json
app/java/com/mymodels/: Main activity.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/java/com/mymodels/: MainActivity.kt  ModelActivity.kt  MyApp.kt  SplashActivity.java  SplashActivity.kt
app/src/main/res/drawable/: bg_ai_gradient.xml  bg_ai_gradient2.xml  bg_ai_gradient_anim.xml  bg_ai_neural.xml  btn_github.xml  glass_card.xml  ic_add.xml  ic_ai.xml  ic_github.xml  ic_launcher_mono.xml  ic_profile.xml  ic_send.xml  ic_user.xml  neural_pattern.xml
app/src/main/res/layout/: aativity_edit_profile.xml  activity_chat.xml  activity_edit_profile.xml  activity_login.xml  activity_main.xml  activity_model.xml  activity_model_manager.xml  activity_models.xml  activity_profile.xml  activity_settings.xml  activity_splash.xml  activity_train_model.xml  empty_model_layout.xml  item_ai_massage.xml  item_ai_message.xml  item_chat.xml  item_chat_ai.xml  item_chat_history.xml  item_chat_user.xml  item_model.xml  item_user_massage.xml  item_user_message.xml  profile_layout.xml
app/src/main/res/menu/: drawer_menu.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-en/: strings.xml
releases/: version.json
website/: index.html  manifest.json
(+50 files in other folders)
